compiler/tests/fixtures/invalid/semantics/reaction_missing_initiator_binding.viv
// Invalid: reaction fails to bind initiator role

reserved action respond:
    roles:
        @responder:
            as: initiator
        @witness:
            as: bystander

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue action respond:
            with partial:
                @witness: @actor
